--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -24,11 +24,15 @@ jobs:
           pip install -r requirements.txt
           python train.py
 
-          echo "Model Metricss"
-          cat metrics.txt
-      # - name: Write CML report
-        
-        # run: |
-          # Post reports as comments in GitHub PRs
-          # cat results.txt >> report.md
-          # cml comment create report.md
+      - name: Write CML report
+        run: |
+          echo "## Model Metricss" > report.md
+          cat results.txt >> report.md
+          cml publish report.md --md
+
+          echo '###Dataviz" >> report.md
+          cml-publish feature_importance.png --md >> report.md
+          cml-publish residuals.png --md >> report.md
+
+          cml-send-comment report.md
+          
