--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -4,7 +4,7 @@ jobs:
   run:
     runs-on: ubuntu-latest
     # optionally use a convenient Ubuntu LTS + DVC + CML image
-    container: ghcr.io/iterative/cml:0-dvc2-base1
+    # container: ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       # - name: Checkout repository
       # - uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
       - name: Write CML report
         run: |
           echo "## Model Metricss" > report.md
-          cat results.txt >> report.md
+          cat metrics.txt >> report.md
           cml publish report.md --md
 
           echo '###Dataviz" >> report.md
