--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -28,9 +28,9 @@ jobs:
         run: |
           echo "## Model Metrics" > report.md
           cat metrics.txt >> report.md
-          echo "###Dataviz" >> report.md
-          cml-publish feature_importance.png --md >> report.md
-          cml-publish residuals.png --md >> report.md
+          # echo "###Dataviz" >> report.md
+          # cml-publish feature_importance.png --md >> report.md
+          # cml-publish residuals.png --md >> report.md
 
           cml-send-comment report.md
           
