--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -26,8 +26,10 @@ jobs:
 
       - name: Write CML report
         run: |
-          echo "## Model Metrics" #> report.md
-          cat metrics.txt #>> report.md
+          echo "## Model Metrics" 
+          #> report.md
+          #cat metrics.txt 
+          #>> report.md
           # echo "###Dataviz" >> report.md
           # cml-publish feature_importance.png --md >> report.md
           # cml-publish residuals.png --md >> report.md
