--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -23,16 +23,17 @@ jobs:
           # Your ML workflow goes here
           pip install -r requirements.txt
           python train.py
+          echo "## Model Metrics" > report.md
 
-      - name: Write CML report
-        run: |
-          echo "## Model Metrics" 
-          #> report.md
+      # - name: Write CML report
+        # run: |
+          
+          #
           #cat metrics.txt 
           #>> report.md
           # echo "###Dataviz" >> report.md
           # cml-publish feature_importance.png --md >> report.md
           # cml-publish residuals.png --md >> report.md
 
-          cml-send-comment report.md
+          # cml-send-comment report.md
           
