--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -25,13 +25,14 @@ jobs:
           python train.py
           echo "## Model Metrics" > report.md
           cat metrics.txt >> report.md
+          
           echo "###Dataviz" >> report.md
           cml-publish feature_importance.png --md >> report.md
           cml-publish residuals.png --md >> report.md
 
+          cml-send-comment report.md
+
       # - name: Write CML report
         # run: |
-          
-
-          # cml-send-comment report.md
+        
           
